<resources>
    <string name="app_name">Smart Pantry Manager</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="my_pantry_list">My Pantry List</string>
    <string name="ingredient_count">0 ingredients</string>
    <string name="suggested_recipes">Suggested Recipes</string>
    <string name="settings">Settings</string>
    <string name="ingredient_name">Ingredient name</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit (e.g. g, ml, pieces)</string>
    <string name="expiry">Expiry date (YYYY-MM-DD, optional)</string>
    <string name="save_ingredient">Save Ingredient</string>
    <string name="cancel">Cancel</string>
    <string name="suggested_recipe">Suggested Recipe</string>
    <string name="no_recipe_match">No recipes match your current pantry list - add more ingredients for suggested Recipes</string>
    <string name="back_to_pantry">Back to Pantry</string>
    <string name="back_to_suggested">Back to Suggested Recipes</string>
    <string name="pantry_count">%1$d available ingredients in your pantry</string>
    <string name="no_expiry">No expiry date</string>
    <string name="expiry_with_date">Expiry Date: %1$s</string>
    <string name="ingredients_title">INGREDIENTS:\n\n%1$s</string>
    <string name="method_title">METHOD:\n\n%1$s</string>
    <string name="all_ingredients_available">All recipe ingredients available</string>
    <string name="edit_ingredient">Edit Your Ingredient:</string>
    <string name="footer">Created by: 402308778</string>
    <string name="banner_description">Smart Pantry Manager banner</string>
    <string name="expiring_soon">Expiring soon alerts</string>
    <string name="sort_by_expiry">Sort pantry by expiry date</string>
    <string name="sort_by_name">Default Sort (by Name)</string>

    <string name="editbtn">Edit</string>
    <string name="deletebtn">Delete</string>



</resources>