<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:orientation="vertical"
        android:padding="20dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/banner" />

        <TextView
            android:id="@+id/tvTitle"

            android:text="@string/add_ingredient"
            android:textSize="26sp"
            android:textStyle="bold"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="VisualLintSystemUi" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="name"
            android:hint="@string/ingredient_name"
            android:inputType="text"
            android:textColorHint="#8D6E63"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/etQuantity"
            android:hint="@string/quantity"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="quantity"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/etUnit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="unit"
            android:hint="@string/unit"
            android:inputType="text"
            android:textColorHint="#8D6E63"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

        <EditText
            android:id="@+id/etExpiry"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="date"
            android:hint="@string/expiry"
            android:inputType="text"
            android:textColorHint="#8D6E63"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/save_ingredient"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/btnCancel"
            android:text="@string/cancel"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <!-- Footer at bottom -->
        <include
            layout="@layout/footer" />

    </LinearLayout>

</ScrollView>