<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_pantry_list"

        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvCount"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:paddingBottom="8dp"
        android:text="@string/ingredient_count" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerPantry"

        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_weight="1" />


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add_ingredient"
            android:layout_gravity="bottom"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />

        <Button
            android:id="@+id/btnSuggestions"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/suggested_recipes"
            android:layout_gravity="bottom"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/settings"
            android:layout_gravity="bottom"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />

    </LinearLayout>

</LinearLayout>