<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/banner" />

    <TextView
        android:text="@string/settings"
        android:textSize="28sp"
        android:textStyle="bold"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchAlerts"
        android:text="@string/expiring_soon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnBack"
        android:text="@string/back_to_pantry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!-- Footer at bottom -->
    <include
        layout="@layout/footer" />

</LinearLayout>